added logs and progress bar

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async-retry": "^1.3.3",
+    "cli-progress": "^3.12.0",
     "dotenv": "^16.4.5",
     "ethereum-block-by-date": "^1.4.9",
     "inquirer": "^8.0.0",
